# dage

./: .gitignore  CLAUDE.md  README.md  README.txt  SHARED_TASK_NOTES.md  dage.py  dager.py  modularize.yaml  pyproject.toml
dage/: __init__.py  __main__.py  cli.py  engine.py  executor.py  git_ops.py  models.py  planner.py  prompts.py  replan.py  tui.py  workflow.py
examples/: numeric-audit.yaml  pgccl.yaml  planck.yaml  test-shell.yaml
tasks/: design-modularize.md  workstreams-modularize.md
templates/: dig-repo.md  opt-prob.md
tests/: test_parallel.yaml  test_parallel_gate.yaml  test_replan.yaml  test_replan_confirm.yaml  test_replan_log.yaml  test_soft_deps.yaml
